Scenario-2-Split-Istio-Configs-By-Namespace/sidecar-all-mesh.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: istio-system-tenant-2
spec:
  egress:
  - hosts:
    - "./*"
    - "istio-system-tenant-2/*"
