Scenario-2-Split-Istio-Configs-By-Namespace/sidecar-override-travel-namespaces.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: override
spec:
  egress:
  - hosts:
    - "./*"
    - "istio-system-tenant-2/*"
    - "travel-control/*"
    - "travel-portal/*"
    - "travel-agency/*"
